css/testimonials.css
/* This is a navbar style */
.row.navbar{
    font-family: "Montserrat", sans-serif; 
    font-size: 25px;
    background-color: #696969;
    font-weight: 600;
    padding: 15px;
    letter-spacing: 2px;
    text-align: center;
}
 .navstyle{
    text-decoration: none;
    color: white;
}
.navstyle:hover{
    color: black;
}
.container-fluid.sticky-top{
    position:sticky;
}

/* Contact container style */  
.testimonials-container{
    display: flex;
    justify-content: center;
    align-items: center;
}
.left-content img, .right-content img{
width: 30%;
height: auto;
border-radius: 50%;
border: 5px solid #696969;
}
.left-content, .right-content{
    flex-direction: row;
    flex-basis: 30%;
    margin: 2%;
    
}
.heading{
    color: white;
    background-color: #696969;
    font-family: "Montserrat", sans-serif;
    text-align: center;
    justify-content: center;
    border-radius: 60%;
    padding: 30px;
}
    p{
    text-align: center;
    font-family: "Montserrat", sans-serif;
    color: #696969;
}

    
    
    


/* Footer styling */
.row.footer{
    background-color: #696969;
    padding:30px;
    text-align: center;
}
.fa{
    color:white;
    margin-left: 10px;
}
.fa:hover{
    color: black;
}
.col-lg-4{
    color:white;
    font-family:"Montserrat", sans-serif;
    font-size: 20px; 
}
.col-lg-4:hover{
    color: black;
}

